--- a/client/src/styles/general.sass
+++ b/client/src/styles/general.sass
@@ -16,8 +16,8 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 
 body
 	line-height: 1
-	font-family: $primary-font
-	background-color: $primary-color
+	font-family: sans-serif
+	background-color: blue 
 	overflow-x: hidden
 ol, ul 
 	list-style: none
@@ -40,4 +40,4 @@ table
     outline: none
 
 h1, h2, h3, h4, h5, h6
-	font-family: $header-font
+	font-family: serif
