--- a/client/src/styles/general.sass
+++ b/client/src/styles/general.sass
@@ -1,4 +1,4 @@
-//  http://meyerweb.com/eric/tools/css/reset/ 
+//  http://meyerweb.com/eric/tools/css/reset/
 //  v2.0 | 20110126
 //  License: none (public domain
 //  Changed from CSS to SASS
@@ -17,9 +17,9 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 body
 	line-height: 1
 	font-family: sans-serif
-	background-color: blue 
+	// background-color: blue */
 	overflow-x: hidden
-ol, ul 
+ol, ul
 	list-style: none
 
 blockquote, q
