:lipstick: (Styling): lost in the sauce

--- a/client/src/styles/login.sass
+++ b/client/src/styles/login.sass
@@ -1,2 +1,23 @@
 .wrapper
-  background: red
+  background-image: url('../assets/homebg3.jpg')
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 30vh
+  .loginForm
+    width: 15%
+
+    border: 1px solid red
+    .form
+      height: 30vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 60%;
+      align-self: center;
+      margin: 0 auto;
+      border: 1px solid;
+      padding: 5%;
