--- a/client/src/styles/login.sass
+++ b/client/src/styles/login.sass
@@ -10,8 +10,8 @@
   align-items: center;
   padding: 30vh
   .loginForm
-
-    background: $modalbg
+    border: 2px solid black;
+    background-color: #b3754f;
     border-radius: 6%
     h1
       font-size: 1.6em
@@ -27,7 +27,6 @@
       width: 60%;
       align-self: center;
       margin: 0 auto;
-      border: 1px solid;
       padding: 30%
 
       button
@@ -40,4 +39,4 @@
         padding: 10px;
         margin: 5px 0;
         border-radius: 10px;
-        border: 2px solid black;;
+        border: 2px solid black;
