--- a/client/src/styles/login.sass
+++ b/client/src/styles/login.sass
@@ -1,17 +1,14 @@
 @import variables
 
 .wrapper
-  background-image: url('../assets/homebg3.jpg')
-  background-repeat: no-repeat;
-  background-size: cover;
   height: 100vh
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  display: flex
+  flex-direction: column
+  align-items: center
   padding: 30vh
   .loginForm
-    border: 2px solid black;
-    background-color: #b3754f;
+    border: 2px solid black
+    background-color: #b3754f
     border-radius: 6%
     h1
       font-size: 1.6em
@@ -21,22 +18,22 @@
       text-decoration: none
     .form
 
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      width: 60%;
-      align-self: center;
-      margin: 0 auto;
+      display: flex
+      flex-direction: column
+      align-items: center
+      width: 60%
+      align-self: center
+      margin: 0 auto
       padding: 30%
 
       button
-        cursor: pointer;
-        height: 2.5em;
-        border-radius: 70px;
+        cursor: pointer
+        height: 2.5em
+        border-radius: 70px
 
       .formInput
-        font-size: 1em;
-        padding: 10px;
-        margin: 5px 0;
-        border-radius: 10px;
-        border: 2px solid black;
+        font-size: 1em
+        padding: 10px
+        margin: 5px 0
+        border-radius: 10px
+        border: 2px solid black
