--- a/client/src/styles/general.sass
+++ b/client/src/styles/general.sass
@@ -24,6 +24,7 @@ body
 	font-family: sans-serif
 	// background-color: blue */
 	overflow-x: hidden
+	overflow-y: hidden
 ol, ul
 	list-style: none
 
