--- a/client/src/styles/gamemap.sass
+++ b/client/src/styles/gamemap.sass
@@ -5,11 +5,21 @@
   display: flex
   flex-direction: column
   align-items: center
-  padding: 30vh
+  padding: 10vh
   .container
+    border: 5px solid black
+    border-radius: 10px
     .map
+      .chatbox
+        background: black
+        color: white
+        h1
+          color: white
+          font-size: 1.6em
+      .mapCanvas
+        width: 100%
     .adv-init
       .adv-init p
-        font-size: 1em
+        font-size: 1rem
         color: white
         background: red
