--- a/client/src/styles/app.sass
+++ b/client/src/styles/app.sass
@@ -1,5 +1,14 @@
 .App
-  text-align: center;
-  // background: red;
-  color: black;
-  height: 100vh;
+  text-align: center
+  color: black
+  height: 100vh
+  display: flex
+  align-items: center
+  justify-content: center
+
+  .mapBox
+    
+
+  .toggleLogBtn
+    border-radius: 6px
+    margin-top: 1%
