--- a/client/src/styles/login.sass
+++ b/client/src/styles/login.sass
@@ -1,42 +1,46 @@
-@import variables
-
-.wrapper
-  height: 80vh
+.logBox
   display: flex
   flex-direction: column
+  justify-content: center
   align-items: center
-  padding: 30vh
+  width: 30%
 
-  .loginForm
-    border: 2px solid black
-    background-color: #b3754f
-    border-radius: 6%
-    
-    h1
-      font-size: 1.6em
-      color: white
-    
-    a
-      color: white
-      text-decoration: none
-    
-    .form
-      display: flex
-      flex-direction: column
-      align-items: center
-      width: 60%
-      align-self: center
-      margin: 0 auto
-      padding: 30%
+  .wrapper
+    display: flex
+    flex-direction: column
+    align-items: center
+    justify-content: center
 
-      button
-        cursor: pointer
-        height: 2.5em
-        border-radius: 70px
+    .loginForm
+      border: 2px solid black
+      background-color: rgba(179, 117, 79, .6)
+      border-radius: 6%
+      
+      h1
+        font-size: 1.6em
+        color: white
+      
+      a
+        color: white
+        text-decoration: none
+      
+      .form
+        display: flex
+        flex-direction: column
+        align-items: center
+        width: 60%
+        align-self: center
+        margin: 0 auto
+        padding: 30%
 
-      .formInput
-        font-size: 1em
-        padding: 10px
-        margin: 5px 0
-        border-radius: 10px
-        border: 2px solid black
+        button
+          cursor: pointer
+          height: 2.5em
+          border-radius: 70px
+
+        .formInput
+          font-size: 1em
+          padding: 10px
+          margin: 5px 0
+          border-radius: 10px
+          border: 2px solid black
