--- a/client/src/styles/gamemap.sass
+++ b/client/src/styles/gamemap.sass
@@ -5,10 +5,8 @@
   display: flex
   flex-direction: column
   align-items: center
-  padding: 10vh
+  padding-top: 15vh
   .container
-    border: 5px solid black
-    border-radius: 10px
     .map
       .chatbox
         background: black
